CustomApplicationUtils refactoring